logs/Slang/generic/preproc/preproc_test_3.sv.log
name: preproc_test_3
description: Test
should_fail: 0
tags: 5.6.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/preproc/preproc_test_3.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/preproc/preproc_test_3.sv:7:10: error: unknown macro or compiler directive '`EXPAND_TO_STRING'
`include `EXPAND_TO_STRING
         ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/preproc/preproc_test_3.sv:8:10: error: unknown macro or compiler directive '`EXPAND_TO_PATH'
`include `EXPAND_TO_PATH  // path
         ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/preproc/preproc_test_3.sv:14:1: error: expected an include file name
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/preproc/preproc_test_3.sv:14:1: error: expected an include file name
